fix crash when in redundant if for boolean and improve suggestions